--- a/Stylesheets/jobDetailsStyle.css
+++ b/Stylesheets/jobDetailsStyle.css
@@ -1,80 +1,80 @@
 .pageStyle {
-    display: block;
-    flex-direction: column;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 30px;
-    background-color: #ffffff;
-    margin-bottom: 30px;
-    position: relative;
-    overflow: hidden;
-    padding: 20px;
+  display: block;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+  border-radius: 30px;
+  background-color: #ffffff;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
 }
 
 .pageStyle h1 {
-    font-size: 24px;
-    margin-top: 0px;
-    margin-bottom: 10px;
+  font-size: 24px;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 .pageStyle h2 {
-    font-size: 24px;
-    font-weight: 700;
-    margin-top: 0px;
-    margin-bottom: 10px;
+  font-size: 24px;
+  font-weight: 700;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 .pageStyle h3 {
-    font-size: 22px;
-    font-weight: 700;
-    margin-top: 0px;
-    margin-bottom: 10px;
+  font-size: 22px;
+  font-weight: 700;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 .pageStyle li {
-    font-size: 18px;
-    font-weight: 600;
-    margin-top: 0px;
-    margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .pageStyle p {
-    font-size: 18px;
-    font-weight: 400;
-    margin-top: 0px;
-    line-height: 1.4;
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: 0px;
+  line-height: 1.4;
 }
 
 .pageStyle img {
-    width: 100%;
-    height: 100%;
-    object-fit: scale-down;
-    border-radius: 30px 30px 0 0;
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
+  border-radius: 30px 30px 0 0;
 }
 
 .contact-info {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.6;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.6;
 }
 
 .contact-info div {
-    display: flex;
-    align-items: center;
-    margin: 5px 0;
-    line-height: 1.4;
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+  line-height: 1.4;
 }
 
 .contact-info .icon {
-    width: 18px;
-    height: 18px;
-    margin-right: 8px;
-    object-fit: contain;
+  width: 18px;
+  height: 18px;
+  margin-right: 8px;
+  object-fit: contain;
 }
 
 .redtext {
-    color: #eb0000;
+  color: #eb0000;
 }
 
 .qualification li {
-    font-size: 20px;
-    font-weight: 500;
-    margin-top: 0px;
-    margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
