--- a/Stylesheets/livelihoodDashboardStyle.css
+++ b/Stylesheets/livelihoodDashboardStyle.css
@@ -2,28 +2,10 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-
-/* For Header and Footer Section */
-
-/*
-header {
-    background-color: #ffffff;
-    padding: 30px;
-    text-align: center;
-}
-
-footer {
-    background-color: #000000;
-    padding: 10px;
-    text-align: center;
-    color: white;
-}
-*/
 
 /* header */
-
 header {
   position: absolute;
   top: 0;
@@ -51,7 +33,7 @@ header .logo-text a {
   gap: 12px;
   color: black;
   text-decoration: none;
-  transition: color .2s ease-in-out;
+  transition: color 0.2s ease-in-out;
 }
 
 header .logo-text a:hover {
@@ -71,8 +53,8 @@ header nav {
   width: 50%;
   text-transform: uppercase;
   transform: translateX(110%);
-  transition: transform .5s ease-in-out;
-  box-shadow: -1px 0px 10px rgba(0, 0, 0, .5);
+  transition: transform 0.5s ease-in-out;
+  box-shadow: -1px 0px 10px rgba(0, 0, 0, 0.5);
   z-index: 10;
 }
 
@@ -121,8 +103,8 @@ header.sticky {
   top: 0;
   right: 0;
   left: 0;
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, .5);
-  animation: reveal .5s ease-in-out forwards;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.5);
+  animation: reveal 0.5s ease-in-out forwards;
 }
 
 @keyframes reveal {
@@ -148,11 +130,10 @@ header.sticky {
   color: white;
 }
 
-
 /* footer */
 footer {
   margin: 0;
-  background-color: #221F1F;
+  background-color: #221f1f;
   color: white;
   padding: 24px;
 }
@@ -194,7 +175,6 @@ footer .wrapper .location-group iframe {
 }
 
 @media only screen and (min-width: 920px) {
-
   /* footer */
   footer {
     padding: 24px 48px;
@@ -224,7 +204,6 @@ footer .wrapper .location-group iframe {
 
 /* Desktop breakpoint */
 @media only screen and (min-width: 1400px) {
-
   /* header */
   .header {
     padding: 12px 0;
@@ -268,13 +247,5 @@ footer .wrapper .location-group iframe {
 
   header .menu {
     display: none;
-  }
-}
-
-/* Media query for iframe section */
-@media (max-width: 1100px) {
-  .iframe-container iframe {
-    width: 90%;
-    height: 500px;
   }
 }
