--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -20,9 +20,15 @@ table {
   width: 50%; /* Price column */
 }
 
-table:hover {
-    box-shadow: 0 0 50px rgba(142, 136, 136, 0.5);
-    transform: scale(1);
+
+
+#tableBody tr:hover {
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(136, 165, 191, 0.48) -6px -2px 16px 0px;
+  transform: scale(1);
+}
+
+#tableBody tr:hover {
+  color: #eb0000;
 }
 
 th {
@@ -69,9 +75,8 @@ tr:last-child td {
   padding: 0px;
   max-width: 75%;
   margin: 15% auto 12% auto;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   display: block;
-  box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.598);
+  box-shadow: rgb(0 0 0 / .4) 0 2px 4px, rgb(0 0 0 / .3) 0 7px 13px -3px, rgb(0 0 0 / .2) 0 -3px 0 inset;
   position: relative;
   overflow-y: auto;
 }
@@ -102,7 +107,7 @@ tr:last-child td {
   margin: 0px;
   display: block;
   width: 100%;
-  height: 500px;
+  max-height: 500px;
   object-fit: cover;
 }
 
@@ -139,17 +144,21 @@ tr:last-child td {
 
 .pageTable {
   background-color: #f8f8f8;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
   border: 1px solid #ccc;
-  padding: 8px 14px;
+  margin: 2px;
+  padding: 8px 16px;
   font-size: 16px;
-  border-radius: 6px;
+  border-radius: 10px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
 .pageTable:hover {
-  background-color: #eb0000;
-  color: white;
+  background-color: #D9D9D9;
+  color: rgb(0, 0, 0);
   cursor: pointer;
 }
 
