--- a/Stylesheets/buttonPagination.css
+++ b/Stylesheets/buttonPagination.css
@@ -8,26 +8,58 @@
   margin-bottom: 40px;
 }
 
-.pagination button {
+/* PAGE BUTTON */
+.pagination .page-button {
   background-color: #ffffff;
-  color: #333333;
-  border: 1px solid #cccccc;
-  padding: 8px 14px;
-  font-size: 16px;
-  border-radius: 6px;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #ffffff;
+  margin: 2px;
+  padding: 8px 16px;
+  font-size: 20px;
+  border-radius: 10px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
-.pagination button:hover {
-  background-color: #eb0000;
-  color: #ffffff;
-  border-color: #eb0000;
+.pagination .page-button:hover {
+  background-color: #D9D9D9;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
 }
 
-.pagination button.active {
+.pagination .page-button.active {
   background-color: #eb0000;
-  color: #ffffff;
+  color: white;
+  border-color: #eb0000;
+  font-weight: bold;
+}
+
+/* PAGE BUTTON NEXT */
+.pagination .page-button-next{
+  background-color: #ffffff;
+  text-align: center;
+  width: 100px;
+  height: 50px;
+  border: 1px solid #ffffff;
+  margin: 2px;
+  padding: 8px 20px;
+  font-size: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.pagination .page-button-next:hover {
+  background-color: #D9D9D9;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+.pagination page-button-next.pagination{
+  background-color: #eb0000;
+  color: white;
   border-color: #eb0000;
   font-weight: bold;
 }
