--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -73,7 +73,7 @@ tr:last-child td {
   background-color: #f0f0f0;
   height: 1350px;
   padding: 0px;
-  max-width: 75%;
+  max-width: 60%;
   margin: 15% auto 12% auto;
   display: block;
   box-shadow: rgb(0 0 0 / .4) 0 2px 4px, rgb(0 0 0 / .3) 0 7px 13px -3px, rgb(0 0 0 / .2) 0 -3px 0 inset;
@@ -171,4 +171,18 @@ tr:last-child td {
 
 #count {
   font-size: 16px;
+}
+
+@media (max-width:1366px) {
+  .container {
+    background-color: #f0f0f0;
+    height: 1350px;
+    padding: 0px;
+    max-width: 75%;
+    margin: 15% auto 12% auto;
+    display: block;
+    box-shadow: rgb(0 0 0 / .4) 0 2px 4px, rgb(0 0 0 / .3) 0 7px 13px -3px, rgb(0 0 0 / .2) 0 -3px 0 inset;
+    position: relative;
+    overflow-y: auto;
+  }
 }
