--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -63,7 +63,8 @@ tr:last-child td {
   max-width: 60%;
   margin: 15% auto 12% auto;
   display: block;
-  border-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
   box-shadow: rgb(0 0 0 / .4) 0 2px 4px, rgb(0 0 0 / .3) 0 7px 13px -3px, rgb(0 0 0 / .2) 0 -3px 0 inset;
   position: relative;
   overflow-y: auto;
@@ -97,8 +98,6 @@ tr:last-child td {
   width: 100%;
   max-height: 500px;
   object-fit: cover;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
 }
 
 .business-permit-table {
