--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -63,8 +63,8 @@ tr:last-child td {
   max-width: 60%;
   margin: 15% auto 12% auto;
   display: block;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
   box-shadow: rgb(0 0 0 / .4) 0 2px 4px, rgb(0 0 0 / .3) 0 7px 13px -3px, rgb(0 0 0 / .2) 0 -3px 0 inset;
   position: relative;
   overflow-y: auto;
@@ -158,7 +158,7 @@ tr:last-child td {
 
 @media (max-width:1366px) {
   .container {
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     height: 1350px;
     padding: 0px;
     max-width: 75%;
