--- a/Stylesheets/businessPermitStepsStyle.css
+++ b/Stylesheets/businessPermitStepsStyle.css
@@ -3,8 +3,6 @@
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  margin-left: 300px;
-  margin-right: 300px;
   margin-top: 150px;
 }
 
@@ -130,6 +128,10 @@
 /* Connector lines for Step Circles */
 .connector-line-top,
 .connector-line-bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   left: calc(2.5vw - 2.5px);
   width: 5px;
@@ -160,11 +162,12 @@
 }
 
 .permit-note {
-  width: 100%;
-  max-width: 1100px;
-  margin: 0 auto;
-  text-align: left;
-  padding-left: 8vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 240px;
+  width: 575px;
+  max-width: 100%;
 }
 
 .permit-note p {
@@ -182,11 +185,5 @@
   .connector-line-bottom {
     top: 250px;
     height: 14vw;
-  }
-
-  .permit-note {
-    max-width: 1000px;
-    padding-left: 0.1vw;
-    padding-right: 0.1vw;
   }
 }
