--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -20,8 +20,6 @@ table {
   width: 25%; /* Price column */
 }
 
-
-
 #tableBody tr:hover {
   box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(136, 165, 191, 0.48) -6px -2px 16px 0px;
   transform: scale(1);
@@ -101,10 +99,12 @@ tr:last-child td {
 }
 
 .business-permit-table {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  display: block;
+  max-width: 100%;
 }
-
 
 .business-permit-table h1, h2{
   text-align: center;
